--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                             </div>
                             <div class="card-body">
                                 <p class="card-text">
-                                    This project, created by the COSC3060 Web Programming Studio team, is a modern and responsive Virtual Learning Platform. Its goal is to build a strong and reliable online education system using standard web technologies like HTML5, CSS3, JavaScript, and other powerful backend frameworks. The platform includes easy course registration, high-quality video lessons, interactive quizzes, and active student forums to support engaging and effective learning. This project highlights the team’s focus on teamwork, creative design, and technical skill in building a scalable, user-friendly e-learning solution.
-                                </p>
+This project, developed by the COSC3060 Web Programming Studio team, is a modern and responsive Free Online Cooking Course platform. Its goal is to create a reliable and user-friendly website that teaches cooking skills through high-quality video tutorials, step-by-step recipes, interactive quizzes, and an active community forum. Built using standard web technologies like HTML5, CSS3, JavaScript, and robust backend frameworks, the platform promotes fun and effective learning for aspiring home cooks. This project reflects the team’s commitment to collaboration, thoughtful design, and technical excellence in delivering a scalable and accessible culinary learning experience.                                </p>
                             </div>
                         </div>
                     </div>
